// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardButton baseline should render selected 1`] = `
<div>
  <div
    class="CardButton selected"
  >
    <p
      class="CardValue"
    >
      A
    </p>
    <p
      class="CardSuit"
    >
      ♥
    </p>
  </div>
</div>
`;

exports[`CardButton baseline should render unselected 1`] = `
<div>
  <div
    class="CardButton "
  >
    <p
      class="CardValue"
    >
      A
    </p>
    <p
      class="CardSuit"
    >
      ♥
    </p>
  </div>
</div>
`;
